Use virtual threads and make BreadthFirstPositionEvaluator multithreaded